--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,9 @@
 
 /*Extra small devices (portrait phones, less than 576px)*/
-@media (max-width: 575.98px) { 
+@media (max-width: 575.98px) {
+    body{
+    padding-top: 89px;
+    }
       .c_padding {
         padding-top: 50px;
         padding-bottom: 70px;
@@ -116,11 +119,15 @@
 
 /*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) { 
-     .c_padding {
+     body{
+        padding-top: 89px;
+    }
+    
+  .c_padding {
         padding-top: 50px;
         padding-bottom: 70px;
     }
-    header {
+   header {
         padding: 10px 0;
     }
   .menu ul li a{
@@ -130,7 +137,7 @@
       padding: 0;
 }
     /*slider start*/
-    .slider {
+   .slider {
     padding-bottom: 60px;
 }
     .c_ind {
